# research-assistant

./: .gitignore  AGENTS.md  README.md  Technical Design Document `re-ass`.md  preferences.md  pyproject.toml  re_ass.toml
docs/: implementation-assumptions.md  investigation-2026-03-22-summariser-ranking.md  report-2026-03-22-ranking-and-pdf-options.md  restructuring-plan-2026-03-22.md  todo.md  validation-report-2026-03-22.md
launchd/: com.user.re-ass.plist
obsidian_vault/: re-ass-preferences.md
obsidian_vault/Templates/: weekly-arxiv-template.md
scripts/: setup.sh
scripts/launchd/: README.md  com.user.re-ass.plist.template  install-and-run-plist.sh  install-plist.sh  render-plist.sh
src/re_ass/: __init__.py  __main__.py  arxiv_fetcher.py  config_manager.py  generation_service.py  llm_orchestrator.py  llm_retry.py  main.py  models.py  note_manager.py  paper_identity.py  pipeline.py  preferences.py  ranking.py  settings.py  setup.py  state_store.py  vault_manager.py
templates/: daily-note-template.md  weekly-note-template.md
tests/: __init__.py  support.py  test_arxiv_fetcher.py  test_config_manager.py  test_generation_service.py  test_llm_orchestrator.py  test_main.py  test_note_manager.py  test_paper_identity.py  test_paper_summariser_providers.py  test_paper_summariser_service.py  test_pipeline.py  test_preferences.py  test_ranking.py  test_settings.py  test_setup.py  test_state_store.py  test_vault_manager.py
user_preferences/defaults/: preferences.md  settings.toml
user_preferences/templates/: README.md  daily-note-template.md  (+1 more)
(+6 files in other folders)
