[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "re-ass"
version = "0.1.0"
description = "Local arXiv research assistant for Obsidian"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "arxiv>=2.1.3,<3",
]

[project.scripts]
re-ass = "re_ass.main:cli"

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/re_ass"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
