[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "re-ass"
version = "0.1.0"
description = "Local arXiv research assistant with generic Markdown outputs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "arxiv>=2.1.3,<3",
  "anthropic>=0.15.0,<1",
  "google-genai>=1.0.0,<2",
  "marker-pdf==1.5.2",
  "openai>=1.1.0,<2",
  "pendulum>=3.2.0,<4",
  "python-dotenv>=1.0.0,<2",
  "requests>=2.31.0,<3",
  "transformers<4.50",
]

[project.scripts]
re-ass = "re_ass.main:cli"
re_ass = "re_ass.main:cli"

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/re_ass"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
